// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP Processor Cloud Run 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "hello",
          "name": "Error",
          "stack": "Error: hello
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/gcp.test.js:17:21)
    at Promise.then.completed (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/node_modules/jest-circus/build/utils.js:333:28)
    at new Promise (<anonymous>)",
        },
      },
      "err": [Error: hello],
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`GCP Processor Cloud Run Error Object 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
        "message": "Ded 1",
        "name": "Error",
        "stack_trace": "Error: Ded 1
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/gcp.test.js:36:22)
    at Promise.then.completed (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/node_modules/jest-circus/build/utils.js:333:28)
    at new Promise (<anonymous>)",
      },
      "err": [Error: Ded 1],
      "level": 50,
      "msg": "Ded 1",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`GCP Processor Cloud Run Fatal with Error Object 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
        "message": "Ded 2",
        "name": "Error",
        "stack_trace": "Error: Ded 2
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/gcp.test.js:45:22)
    at Promise.then.completed (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/node_modules/jest-circus/build/utils.js:333:28)
    at new Promise (<anonymous>)",
      },
      "err": [Error: Ded 2],
      "level": 60,
      "msg": "Ded 2",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`GCP Processor Cloud Run variant 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "hello",
          "name": "Error",
          "stack": "Error: hello
    at Object.<anonymous> (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/__tests__/gcp.test.js:27:21)
    at Promise.then.completed (~/block65_logger/bazel-out/k8-fastbuild/~/block65_logger/node_modules/jest-circus/build/utils.js:333:28)
    at new Promise (<anonymous>)",
        },
      },
      "err": [Error: hello],
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;
